sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:82: error: not found: value nbBases
      deplace((trouverTrou()+1)%nbBases,bonJoueurDroite(B))
                                ^SelectBaseball:94: error: not found: value nbBases
          deplace(((trouverTrou()+1)%nbBases),bonJoueurDroite(B))
                                     ^SelectBaseball:106: error: not found: value nbBases
          deplace((trouverTrou()+1)%nbBases,bonJoueurDroite(B))
                                    ^